Fix:Style of Post Content overflow

--- a/src/Component/TweetCard/TweetCard.css
+++ b/src/Component/TweetCard/TweetCard.css
@@ -13,6 +13,10 @@ width: 50%;
     border-top: 1px solid #2F3336;
     position: relative;
 }
+.postCard-profileImage{
+    width: 10%;
+}
+
 .postCard-profileImage>img{
     cursor: pointer;
     height: 40px;
@@ -20,7 +24,7 @@ width: 50%;
     border-radius: 50%;
 }
 .postCard-Content{
-    width:100%;
+    min-width:90%;
     display: flex;
     flex-direction: column;
 }
@@ -53,6 +57,7 @@ width: 50%;
     font-weight: 400;
     line-height: normal;
     color: #D9D9D9;
+    flex: 1;
    
 }
 .postCard-image{
@@ -89,7 +94,9 @@ width: 50%;
     padding: 0.2rem 0.2rem;
     border-radius: 50%;
   } */
-
+.post-content-text{
+    width: 100%;
+}
 
 
 
